--- a/ExcelConverter.csproj
+++ b/ExcelConverter.csproj
@@ -62,10 +62,14 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Activity.cs" />
+    <Compile Include="BaseViewModel.cs" />
     <Compile Include="DayProgram.cs" />
     <Compile Include="FireBaseService.cs" />
+    <Compile Include="LoginViewModel.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="User.cs" />
+    <Compile Include="UserService.cs" />
     <Compile Include="XLSXConverter.cs" />
   </ItemGroup>
   <ItemGroup>
